log
Thu 09 Mar 2023 04:10:11 PM UTC: 
 tests:  0|7
total_score: 0/70
10dfc22
Thu 09 Mar 2023 04:14:20 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
85b93d5
Sat 11 Mar 2023 11:47:42 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:31:12: error: invalid type argument of unary ‘*’ (have ‘int’)
   31 |         if(*a[k] < *min)
      |            ^~~~~
exercises.c:33:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   33 |           *min = *a[k];
      |                  ^~~~~
exercises.c:35:12: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |         if(*a[k] > *max)
      |            ^~~~~
exercises.c:37:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   37 |           *max = *a[k];
      |                  ^~~~~
Compilation failed
f27b0fc
Sat 11 Mar 2023 11:47:54 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:35:12: error: invalid type argument of unary ‘*’ (have ‘int’)
   35 |         if(*a[k] > *max)
      |            ^~~~~
Compilation failed
e1c7f04
Sat 11 Mar 2023 11:48:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
e8a28eb
Sat 11 Mar 2023 11:50:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
673926d
